Fix bad wrapping in table

--- a/assets/sass/_tables.scss
+++ b/assets/sass/_tables.scss
@@ -31,7 +31,7 @@ td.col-thirty {
 th.col-twenty,
 td.col-twenty,
  {
-  width: 20%
+  width: 20%;
 }
 
 td:first-child {
